[package]
name = "ckb-blst"
version = "0.3.4"
authors = ["contrun <uuuuuu@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Bindings for blst BLS12-381 library with ckb compatibility"
repository = "https://github.com/cryptape/ckb-blst-rs"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "rustfmt.toml",
    "blst/src/*.c",
    "blst/src/*.h",
    "blst/deps/**/**.c",
    "blst/deps/**/**.h",
    "blst/build/**",
    "blst/src/asm/*.pl",
    "blst/src/asm/*.S",
    "blst/bindings/blst.h",
    "blst/bindings/blst_aux.h",
]

[features]
default = ["ckb-vm"]
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = []
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = []
# Use libblst built specifically for ckb-vm
ckb-vm = []
# Enable std
std = []

[build-dependencies]
cc = "1.0"
glob = "0.3"

[dependencies]
zeroize = { version = "^1.1", features = ["zeroize_derive"] }

[dev-dependencies]
rand = "0.7"
rand_chacha = "0.2"
criterion = "0.3"

[[bench]]
name = "blst_benches"
harness = false

[profile.release]
#opt-level = 3

[badges]
maintenance = { status = "actively-developed" }
