[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = { path = "../../rust" }
ckb-std = "0.12.1"
rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.2", default-features = false }
